2009-01-07  Dmitry Dulepov  <dmitry@typo3.org>

	* Removed hook definition for TCEMain's processCmdMap because it was not used

2008-12-12  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug: if title field for the records is empty, HTDBDoc produces error in CLI script

2008-12-11  Dmitry Dulepov  <dmitry@typo3.org>

	* Added new column to the records indexing to allow recording "Last modified" time for records
	* Changed index on tx_mnogosearch_urllog

2008-12-10  Dmitry Dulepov  <dmitry@typo3.org>

	* Updated manual with the information about TYPO3SEARCH_xxx and more advanced https:// indexing
	* Updated manual: added information about conflict with nc_staticfilecache
	* Updated manual: added information about indexing files without using HTTP
	* Deleted old manual
	* Released version 2.1.5
	* Added new markers (date and size) to the output
	* Added "Last-modified" header generation while indexing (only if not set already)
	* Added tt_news hook to set page modification date correctly

2008-12-09  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed: period was incorrectly specified
	* Fixed: file names with spaces shows %20 in titles
	* Added more extensions to "disallow" in CLI script

2008-12-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Manual update with information about order fo allow/disallow records

2008-12-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed non-localized string in the long search form
	* Fixed wrong Realm command in CLI script

2008-11-28  Dmitry Dulepov  <dmitry@typo3.org>

	* Updated manual to show how to index https:// sites
	* Fixed small typo in the TS comment

2008-11-27  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #2232: TYPO3SEARCH markers not respected
	* Fixed: CSS list was not aligned properly vertically
	* Fixed bug #2233: (No title) for found documents with spaces
	* Fixed bug #2236: Not all pages of the site are indexed
	* Small manual updates
	* Disable debug logging for now
	* Released version 2.1.4
